--- a/rps/index.html
+++ b/rps/index.html
@@ -28,8 +28,7 @@
   </div>
 
   <p id="result"></p>
-  <button id="restart-btn" onclick="restartGame()" style="display:none;">Restart Game</button>
-  
+ <button id="restart-btn" onclick="restartGame()">Restart Game</button>
 <script src="script.js"></script>
 </body>
 </html>
