--- a/color match/index.html
+++ b/color match/index.html
@@ -15,6 +15,7 @@
       </div>
       <p>Time: <span id="timer">20</span> seconds</p> <!--This is for the 20 second timer that is live-->
       <p>Score: <span id="score">0</span></p> <!--Live score-->
+      <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/span , for the span I used the website-->
       <button onclick="startGame()">Go</button> <!--Button to start the game-->
       <button onclick="restartGame()">Restart</button> <!--Button to restart the game-->
     </div>
