--- a/color match/index.html
+++ b/color match/index.html
@@ -4,7 +4,8 @@
       <h1 id="title">Color Matching!</h1>  
       <div id="target" class="target"></div> <!--Box that shows the target color-->
       <div class="colors"> <!--Container for all color choices-->
-        <div class="color" style="background: red" onclick="checkColor('red')"></div>   
+        <div class="color" style="background: red" onclick="checkColor('red')"></div>
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style , this helped to make the colors and I used this same website for the rest of the colors underneath this red color-->
         <div class="color" style="background: green" onclick="checkColor('green')"></div> 
         <div class="color" style="background: blue" onclick="checkColor('blue')"></div>    
         <div class="color" style="background: yellow" onclick="checkColor('yellow')"></div>
