--- a/color match/index.html
+++ b/color match/index.html
@@ -5,14 +5,21 @@
       <div id="target" class="target"></div> <!--Box that shows the target color-->
       <div class="colors"> <!--Container for all color choices-->
         <div class="color" style="background: red" onclick="checkColor('red')"></div>
-        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style , this helped to make the colors and I used this same website for the rest of the colors underneath this red color-->
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style , this helped to make the red color and I used this same website for the rest of the colors underneath this red color-->
         <div class="color" style="background: green" onclick="checkColor('green')"></div> 
-        <div class="color" style="background: blue" onclick="checkColor('blue')"></div>    
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
+        <div class="color" style="background: blue" onclick="checkColor('blue')"></div> 
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
         <div class="color" style="background: yellow" onclick="checkColor('yellow')"></div>
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
         <div class="color" style="background: gray" onclick="checkColor('gray')"></div>   
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
         <div class="color" style="background: purple" onclick="checkColor('purple')"></div>
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
         <div class="color" style="background: maroon" onclick="checkColor('maroon')"></div>
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
         <div class="color" style="background: orange" onclick="checkColor('orange')"></div>
+        <!--https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Global_attributes/style-->
       </div>
       <p>Time: <span id="timer">20</span> seconds</p> <!--This is for the 20 second timer that is live-->
       <p>Score: <span id="score">0</span></p> <!--Live score-->
